 * добавлен индикатор прогресса для модуля распаковки архивов;
 * процесс распаковки теперь выполняется асинхронно и не блокирует основной интерфейс;
 * исправлена ошибка, из-за которой окно с прогрессом распаковки архива могло не появляться;
 * реализована очистка кастомных карт, загруженных из Maps Workshop;
 * реализован вывод статуса в модуле очистки;
 * 

Версия 20.0 Final r2196 (02 апреля 2015):
 * добавлена поддержка модов Half-Life: Update, Lambda Wars и Rexaura;
 * в список поддерживаемых разрешений экрана теперь добавлена и частота регенерации;
 * исправлена ошибка с элементом управления выбора разрешения экрана;
 * добавлены описания новых клиентских и серверных консольных переменных и функций, добавленных в TF2 и CS:GO;
 * добавлен новый модуль загрузок;
 * добавлена новая маска имён *.vpk.cache в модуль очистки для звукового кэша;
 * добавлен новый модуль управления HUD: установка, удаление, обновление;
 * добавлено тридцать два HUD для игры TF2;
 * устранена возможность закрытия главной формы программы во время работы отдельных модулей;
 * больше кода теперь выполняется асинхронно в отдельных потоках;
 * удалены все ссылки на официальную Wiki в связи с закрытием Google Code;
 * модуль Micro Hosts Editor был обновлён до версии 0.5.1;
 * удалён неработающий пункт меню в модуле Micro Hosts Editor;
 * переписана с нуля большая часть кода ядра приложения;
 * переработан диалог настроек программы;
 * переработан интерфейс модуля обновления программы;
 * исправлена ошибка, которая приводила к неправильной установке VPK пакетов;
 * исправлена ошибка, из-за которой окно модуля обновления могло быть закрыто пользователем во время проверки обновлений;
 * переписаны алгоритмы получения обновлений;
 * исправлено множество опечаток и неточностей в справочной системе;
 * исправлена ошибка, из-за которой графические настройки игры не очищались корректно;