@@ -16,6 +16,7 @@
  * исправлена ошибка, из-за которой окно с прогрессом распаковки архива могло не появляться;
  * реализована очистка кастомных карт, загруженных из Maps Workshop;
  * реализован вывод статуса в модуле очистки;
+ * добавлена полная поддержка модификации Portal Stories: Mel;
  * 
 
 Версия 20.0 Final r2196 (02 апреля 2015):
